# chelleport

./: .gitignore  README.md  TODO.norg  chelleport.cabal  flake.nix  hie.yaml  justfile
cpp/: image.cpp  libchelleport.cpp  recognizer.cpp
include/: image.h  libchelleport.h  recognizer.h
specs/: Main.hs  Mock.hs  TestUtils.hs
specs/Specs/: AppEventSpec.hs  AppStateSpec.hs  AppStateUpdateSpec.hs  ArgsSpec.hs  KeySequenceSpec.hs  ViewSpec.hs
src/: Chelleport.hs
src/Chelleport/: AppShell.hs  AppState.hs  Args.hs  Config.hs  Context.hs  Control.hs  Draw.hs  KeySequence.hs  OCR.hs  Types.hs  Utils.hs  View.hs
