cabal-version:   3.0

name:            chelleport
version:         0.1.0.0
license:         MIT
author:          Akshay Nair <phenax5@gmail.com>
maintainer:      Akshay Nair <phenax5@gmail.com>
build-type:      Simple
synopsis:        Mouse control
description:     Mouse control

Flag release
  Description: Release build options
  Manual: True
  Default: False

common common-config
  default-extensions:
    ExplicitForAll,
    FlexibleContexts,
    FlexibleInstances,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    NamedFieldPuns,
    NumericUnderscores,
    OverloadedStrings,
    QuasiQuotes,
    TemplateHaskell,
    TupleSections,
    UndecidableInstances
  default-language: Haskell2010
  build-depends:
    base,
    text,
    mtl == 2.3.1,
    sdl2 == 2.5.5.0,
    containers

common warnings
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wextra -Wno-unused-do-bind -Wname-shadowing
    -fwarn-tabs -fprint-explicit-foralls -fprint-explicit-kinds
  if flag(release)
    ghc-options: -O2 -Werror

executable chelleport
  import: common-config, warnings
  hs-source-dirs: bin
  main-is: Main.hs
  build-depends: lib-chelleport
  -- other-modules:

library lib-chelleport
  import: common-config, warnings
  hs-source-dirs: src
  build-depends:
    bytestring,
    file-embed == 0.0.16.0,
    sdl2-ttf == 2.1.3,
    vector == 0.13.1.0,
    X11 == 1.10.3,
    xtest == 0.2
  exposed-modules:
    Chelleport
    Chelleport.AppShell
    Chelleport.Context
    Chelleport.Control
    Chelleport.Draw
    Chelleport.KeySequence
    Chelleport.Types
    Chelleport.Utils
    Chelleport.View

test-suite specs
  import: common-config, warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: specs
  main-is: Main.hs
  other-modules:
    Mock
    Specs.KeySequenceSpec
    Specs.AppStateUpdateSpec
    Specs.AppEventSpec
  build-depends:
    lib-chelleport,
    neat-interpolation,
    hspec
