cabal-version:   3.0

name:            chelleport
version:         0.1.0.0
license:         MIT
author:          Akshay Nair <phenax5@gmail.com>
maintainer:      Akshay Nair <phenax5@gmail.com>
build-type:      Simple
synopsis:        Mouse control
description:     Mouse control

source-repository head
  type:     git
  location: https://github.com/phenax/chelleport.git

common common-config
  default-extensions:
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    UndecidableInstances
  default-language: Haskell2010
  build-depends:
    array,
    base,
    containers,
    data-default,
    directory,
    mtl == 2.3.1,
    sdl2 == 2.5.5.0,
    temporary,
    text,
    time

common warnings
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wextra -Wno-unused-do-bind -Wname-shadowing
    -fwarn-tabs -fprint-explicit-foralls -fprint-explicit-kinds

common extension
  extra-libraries: stdc++ Xtst X11 tesseract leptonica
  include-dirs: include
  c-sources:
    cpp/libchelleport.cpp
    cpp/recognizer.cpp
    cpp/image.cpp
  cxx-options: -O3 -ffast-math -march=native
  extra-source-files:
    cpp/*.cpp
    include/*.h
    static/font.ttf

executable chelleport
  import: common-config, warnings, extension
  hs-source-dirs: bin
  main-is: Main.hs
  build-depends: lib-chelleport

library lib-chelleport
  import: common-config, warnings, extension
  hs-source-dirs: src
  build-depends:
    bytestring,
    file-embed == 0.0.16.0,
    sdl2-ttf == 2.1.3,
    vector == 0.13.1.0,
    X11 == 1.10.3
  exposed-modules:
    Chelleport
    Chelleport.AppShell
    Chelleport.AppState
    Chelleport.Config
    Chelleport.Context
    Chelleport.Control
    Chelleport.Draw
    Chelleport.KeySequence
    Chelleport.OCR
    Chelleport.Types
    Chelleport.Utils
    Chelleport.View

test-suite specs
  import: common-config, warnings, extension
  type: exitcode-stdio-1.0
  hs-source-dirs: specs
  main-is: Main.hs
  ghc-options: -Wno-name-shadowing
  other-modules:
    Mock
    TestUtils
    Specs.KeySequenceSpec
    Specs.AppStateSpec
    Specs.AppEventSpec
    Specs.ViewSpec
  build-depends:
    lib-chelleport,
    template-haskell,
    hspec
